# Triangles-OpenGL

./: .gitmodules  CMakeLists.txt  README.md
include/: camera.hpp  gl.hpp  mesh.hpp  renderer.hpp  scene.hpp  support.hpp  utility.hpp  window.hpp
include/GL/: camera.hpp  gl.hpp  mesh.hpp  renderer.hpp  window.hpp
include/glad/: glad.h
include/shaders/: triangle.fs  triangle.vs
src/: CMakeLists.txt  glad.c  main.cpp
tests/: test1.txt  test4.txt  test5.txt
